🐛 Correction de la z-index pour le pop-up de suppression de compte

--- a/src/public/css/newEvent.css
+++ b/src/public/css/newEvent.css
@@ -14,12 +14,16 @@ body {
 .modal {
   display: none; /* Par défaut caché */
   position: fixed;
-  z-index: 1000;
+  z-index: 1050 !important;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5); /* Ombre semi-transparente */
+}
+
+.modal-backdrop {
+  z-index: 1040 !important;
 }
 
 .modal-content {
